root/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: service-ingress
spec:
  rules:
  - host: "www.fight-club.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-service
            port:
              number: 3001
